--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,21 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="233dp" />
+        app:layout_constraintGuide_percent="0.26812428" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.30379745" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.40966627" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
@@ -25,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="184dp" />
+        app:layout_constraintGuide_percent="0.78826237" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
@@ -42,12 +56,31 @@
         app:layout_constraintGuide_end="377dp" />
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_guide_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_guide_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginEnd="173dp"
         android:backgroundTint="#26000000"
         android:text="로그인"
         android:textAlignment="center"
@@ -55,54 +88,58 @@
         android:textColorHint="#26000000"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="201dp" />
-
-    <EditText
-        android:id="@+id/edt_register_activity_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:hint="이메일 또는 전화번호 입력"
-        android:inputType="textPersonName"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="264dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001" />
 
-    <EditText
-        android:id="@+id/edt_login_activity_pw"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:hint="비밀번호 입력"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="309dp" />
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guideline11"
+        app:layout_constraintEnd_toStartOf="@+id/vertical_guide_right"
+        app:layout_constraintStart_toStartOf="@+id/vertical_guide_left"
+        app:layout_constraintTop_toTopOf="@+id/guideline8">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비밀번호를 입력해주세요"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="355dp" />
+        <EditText
+            android:id="@+id/edt_register_activity_id"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:hint="이메일 또는 전화번호 입력"
+            android:inputType="textPersonName"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+            tools:inputType="textWebEmailAddress" />
+
+        <EditText
+            android:id="@+id/edt_login_activity_pw"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:hint="비밀번호 입력"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+            tools:inputType="textWebEmailAddress" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="비밀번호를 입력해주세요"
+            android:textAlignment="center"
+            android:textColor="#FF6868"
+            android:visibility="visible" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView5"
@@ -113,48 +150,71 @@
         android:textColor="#FF5353"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="183dp"
-        tools:layout_editor_absoluteY="489dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline11"
+        app:layout_constraintVertical_bias="0.28" />
 
-    <TextView
-        android:id="@+id/textView7"
+    <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="잊어버리셨나요?"
-        android:textAlignment="center"
-        android:textColor="#262626"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="157dp"
-        tools:layout_editor_absoluteY="685dp" />
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.825">
 
-    <TextView
-        android:id="@+id/textView8"
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="잊어버리셨나요?"
+            android:textAlignment="center"
+            android:textColor="#262626"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="계정 재설정하기"
+            android:textAlignment="center"
+            android:textColor="#FF6868" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="안전하게 메모내용을 저장하세요"
-        android:textAlignment="center"
-        android:textColor="#262626"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="112dp"
-        tools:layout_editor_absoluteY="777dp" />
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.935">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="계정 재설정하기"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="704dp" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="안전하게 메모내용을 저장하세요"
+            android:textAlignment="center"
+            android:textColor="#262626"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="회원가입"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="796dp" />
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="회원가입"
+            android:textAlignment="center"
+            android:textColor="#FF6868" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
