--- a/app/src/main/res/layout/activity_pinactivity.xml
+++ b/app/src/main/res/layout/activity_pinactivity.xml
@@ -6,19 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".PINActivity">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="448dp" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5592635" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="233dp" />
+        app:layout_constraintGuide_percent="0.26812428" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline16"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.39930955" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline17"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.44994247" />
 
     <TextView
         android:id="@+id/tv_reset_user_activity_title"
@@ -31,49 +45,105 @@
         android:textColorHint="#26000000"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="200dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001" />
 
-    <TextView
-        android:id="@+id/textView11"
+    <LinearLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="●"
-        android:textColor="#CDCDCD"
-        android:textSize="16sp"
-        tools:layout_editor_absoluteX="197dp"
-        tools:layout_editor_absoluteY="323dp" />
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline16">
 
-    <TextView
-        android:id="@+id/tv_reset_user_activity_message"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="●"
+                android:textAlignment="center"
+                android:textColor="#CDCDCD"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="●"
+                android:textAlignment="center"
+                android:textColor="#CDCDCD"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView17"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="●"
+                android:textAlignment="center"
+                android:textColor="#CDCDCD"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="●"
+                android:textAlignment="center"
+                android:textColor="#CDCDCD"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_reset_user_activity_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="입력한 정보를 가지고 있지 않습니다"
+            android:textAlignment="center"
+            android:textColor="#FF6868"
+            android:visibility="invisible" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="입력한 정보를 가지고 있지 않습니다"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        tools:layout_editor_absoluteX="102dp"
-        tools:layout_editor_absoluteY="345dp" />
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
+        app:layout_constraintVertical_bias="0.22000003">
 
-    <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PIN을 잊어버리셨나요?"
-        android:textAlignment="center"
-        android:textColor="#262626"
-        android:textStyle="bold"
-        tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="447dp" />
+        <TextView
+            android:id="@+id/textView21"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PIN을 잊어버리셨나요?"
+            android:textAlignment="center"
+            android:textColor="#262626"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView45"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PIN 재설정"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="466dp" />
+        <TextView
+            android:id="@+id/textView45"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PIN 재설정"
+            android:textAlignment="center"
+            android:textColor="#FF6868" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
