--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,8 +15,120 @@
         android:textColor="#262626"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="201dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/cb_register_activity_personal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="개인정보 처리방침"
+                android:textColor="#262626" />
+
+            <CheckBox
+                android:id="@+id/cb_register_activity_policy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이용약관"
+                android:textColor="#262626" />
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/cb_register_activity_allcheck"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="약관에 모두 동의합니다"
+            android:textColor="#262626" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintStart_toStartOf="@+id/guideline2"
+        app:layout_constraintTop_toTopOf="@+id/guideline5">
+
+        <EditText
+            android:id="@+id/_register_activity_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:hint="이메일 또는 전화번호"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+
+            tools:inputType="textWebEmailAddress" />
+
+        <EditText
+            android:id="@+id/_register_activity_birth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:hint="생년월일"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+            tools:inputType="textWebEmailAddress" />
+
+        <EditText
+            android:id="@+id/_register_activity_checkpw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:hint="비밀번호 확인"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+
+            tools:inputType="textWebEmailAddress" />
+
+        <EditText
+            android:id="@+id/_register_activity_pw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#26000000"
+            android:hint="비밀번호"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+
+            tools:inputType="textWebEmailAddress" />
+
+        <TextView
+            android:id="@+id/tv_register_activity_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#26000000"
+
+            android:text="내용을 모두 입력해주세요"
+            android:textAlignment="center"
+            android:textColor="#FF6868" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_register_activity_ok"
@@ -27,149 +139,61 @@
         android:textColor="#FF5353"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="636dp" />
-
-    <EditText
-        android:id="@+id/_register_activity_birth"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:hint="생년월일"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="478dp" />
-
-    <TextView
-        android:id="@+id/tv_register_activity_message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#26000000"
-
-        android:text="내용을 모두 입력해주세요"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="523dp" />
-
-    <EditText
-        android:id="@+id/_register_activity_checkpw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:hint="비밀번호 확인"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="433dp" />
-
-    <EditText
-        android:id="@+id/_register_activity_pw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:hint="비밀번호"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="388dp" />
-
-    <EditText
-        android:id="@+id/_register_activity_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:hint="이메일 또는 전화번호"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="343dp" />
-
-    <CheckBox
-        android:id="@+id/cb_register_activity_allcheck"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="약관에 모두 동의합니다"
-        android:textColor="#262626"
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="287dp" />
-
-    <CheckBox
-        android:id="@+id/cb_register_activity_personal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="개인정보 처리방침"
-        android:textColor="#262626"
-        tools:layout_editor_absoluteX="173dp"
-        tools:layout_editor_absoluteY="255dp" />
-
-    <CheckBox
-        android:id="@+id/cb_register_activity_policy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="이용약관"
-        android:textColor="#262626"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="255dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
+        app:layout_constraintVertical_bias="0.33999997" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="201dp" />
+        app:layout_constraintGuide_percent="0.26812428" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="343dp" />
+        app:layout_constraintGuide_percent="0.29344073" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="205dp" />
+        app:layout_constraintGuide_percent="0.15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.85" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="201dp" />
+        app:layout_constraintGuide_percent="0.38550058" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline12"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.615" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline14"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.77" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
