--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -33,14 +33,21 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="521dp" />
+        app:layout_constraintGuide_percent="0.56156504" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline21"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="354dp" />
+        app:layout_constraintGuide_percent="0.35558113" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.47986192" />
 
     <TextView
         android:id="@+id/tv_reset_password_title"
@@ -53,59 +60,65 @@
         android:textColorHint="#26000000"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="92dp"
-        tools:layout_editor_absoluteY="201dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline84"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="233dp" />
+        app:layout_constraintGuide_percent="0.26812428" />
 
-    <EditText
-        android:id="@+id/edt__reset_password_checkpw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:hint="비밀번호 확인"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
+    <LinearLayout
+        android:id="@+id/linearLayout8"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="354dp" />
+        app:layout_constraintTop_toTopOf="@+id/guideline21">
 
-    <EditText
-        android:id="@+id/edt__reset_password_pw"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:hint="새 비밀번호"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="309dp" />
+        <EditText
+            android:id="@+id/edt__reset_password_checkpw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:hint="비밀번호 확인"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+            tools:inputType="textWebEmailAddress" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="비밀번호를 입력해주세요"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        tools:layout_editor_absoluteX="133dp"
-        tools:layout_editor_absoluteY="399dp" />
+        <EditText
+            android:id="@+id/edt__reset_password_pw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:hint="새 비밀번호"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+            tools:inputType="textWebEmailAddress" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="비밀번호를 입력해주세요"
+            android:textAlignment="center"
+            android:textColor="#FF6868" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView5"
@@ -116,7 +129,10 @@
         android:textColor="#FF5353"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="183dp"
-        tools:layout_editor_absoluteY="489dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline15"
+        app:layout_constraintVertical_bias="0.17000002" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
