--- a/app/src/main/res/layout/activity_reset_user_info.xml
+++ b/app/src/main/res/layout/activity_reset_user_info.xml
@@ -11,7 +11,28 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="448dp" />
+        app:layout_constraintGuide_percent="0.5155351" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline18"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.35" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline19"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.43" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.26812428" />
 
     <TextView
         android:id="@+id/tv_reset_user_activity_title"
@@ -24,41 +45,43 @@
         android:textColorHint="#26000000"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="201dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="233dp" />
-
-    <EditText
-        android:id="@+id/edt_reset_user_activity_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:backgroundTint="#26000000"
-        android:ems="10"
-        android:inputType="textWebPassword"
-        android:textColor="#262626"
-        android:textColorHint="#26000000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:inputType="textWebEmailAddress"
-        tools:layout_editor_absoluteY="308dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24000001" />
 
-    <TextView
-        android:id="@+id/tv_reset_user_activity_message"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout9"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="입력한 정보를 가지고 있지 않습니다"
-        android:textAlignment="center"
-        android:textColor="#FF6868"
-        tools:layout_editor_absoluteX="102dp"
-        tools:layout_editor_absoluteY="353dp" />
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guideline19"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline18">
+
+        <EditText
+            android:id="@+id/edt_reset_user_activity_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:backgroundTint="#26000000"
+            android:ems="10"
+            android:inputType="textWebPassword"
+            android:textColor="#262626"
+            android:textColorHint="#26000000"
+            tools:inputType="textWebEmailAddress" />
+
+        <TextView
+            android:id="@+id/tv_reset_user_activity_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="입력한 정보를 가지고 있지 않습니다"
+            android:textAlignment="center"
+            android:textColor="#FF6868" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_reset_user_activity_call"
@@ -69,7 +92,10 @@
         android:textColor="#FF5353"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="448dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline19"
+        app:layout_constraintVertical_bias="0.16000003" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
