--- a/app/src/main/res/layout/main_card_item.xml
+++ b/app/src/main/res/layout/main_card_item.xml
@@ -3,18 +3,18 @@
     android:id="@+id/view_main_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp">
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp">
 
     <FrameLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="1"
         android:background="@drawable/main_card"
-        android:elevation="6dp"
+        android:elevation="3dp"
         android:paddingLeft="10dp"
         android:paddingTop="15dp"
         android:paddingRight="10dp"
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:text="1.bab\n2.bookbab\n3.gobab"
                     android:textColor="#FF000000"
-                    android:textSize="12sp" />
+                    android:textSize="14sp" />
 
 
             </LinearLayout>
@@ -84,17 +84,16 @@
     <FrameLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_weight="1"
         android:background="@drawable/main_card"
-        android:elevation="6dp"
+        android:elevation="3dp"
         android:paddingLeft="10dp"
         android:paddingTop="15dp"
         android:paddingRight="10dp"
-        android:paddingBottom="15dp"
-        >
+        android:paddingBottom="15dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -149,7 +148,7 @@
                     android:layout_height="wrap_content"
                     android:text="1.bab\n2.bookbab\n3.gobab"
                     android:textColor="#FF000000"
-                    android:textSize="12sp" />
+                    android:textSize="14sp" />
 
 
             </LinearLayout>
