--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -6,7 +6,7 @@
         <Preference
             android:defaultValue="false"
             android:key="login"
-            android:summary="로그인 후 내보내기, 가져오기를 할 수 있습니다."
+            android:summary="로그인 후 내보내기, 가져오기를 할 수 있습니다.\n계정이 없는 경우, 이곳을 터치하여 가입하세요."
             android:title="계정 연동" />
 
         <Preference
@@ -41,8 +41,8 @@
         <Preference
             android:defaultValue="false"
             android:key="key mode"
-            android:summary="볼륨키, 홈키, 전원키등 물리적인 입력을 통해서
-메모장을불러올 수 있습니다."
+            android:summary="볼륨키, 홈키, 전원키등 물리적 입력을 통해서
+메모장을 불러올 수 있습니다."
             android:title="특수키 메모" />
 
     </PreferenceCategory>
