--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -105,7 +105,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline8">
 
         <EditText
-            android:id="@+id/edt_register_activity_id"
+            android:id="@+id/edt_login_activity_email"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -131,18 +131,18 @@
             tools:inputType="textWebEmailAddress" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_reset_password_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="비밀번호를 입력해주세요"
             android:textAlignment="center"
             android:textColor="#FF6868"
-            android:visibility="visible" />
+            android:visibility="invisible" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tv_reset_password_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="확인"
@@ -178,7 +178,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/tv_login_activity_find_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="계정 재설정하기"
@@ -207,7 +207,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/tv_login_activity_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
