--- a/app/src/main/res/layout/activity_pinactivity.xml
+++ b/app/src/main/res/layout/activity_pinactivity.xml
@@ -56,9 +56,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline16">
+        app:layout_constraintTop_toTopOf="@+id/guideline16"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -112,8 +114,7 @@
             android:layout_height="wrap_content"
             android:text="입력한 정보를 가지고 있지 않습니다"
             android:textAlignment="center"
-            android:textColor="#FF6868"
-            android:visibility="invisible" />
+            android:textColor="#FF6868" />
 
     </LinearLayout>
 
