--- a/app/src/main/res/layout/activity_web_test.xml
+++ b/app/src/main/res/layout/activity_web_test.xml
@@ -2,13 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tv_"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".WebTestActivity">
 
     <Button
+        android:id="@+id/btnEnter"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:id="@+id/btnEnter"
-        android:text="접속하기"/>
+        android:text="접속하기" />
+
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:text="TextView" />
 </LinearLayout>
