--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -75,12 +75,11 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#26000000"
             android:ems="10"
-            android:hint="이메일 또는 전화번호"
-            android:inputType="textWebPassword"
+            android:hint="이메일"
+            android:inputType="textWebEmailAddress"
             android:textColor="#262626"
-            android:textColorHint="#26000000"
 
-            tools:inputType="textWebEmailAddress" />
+            android:textColorHint="#26000000" />
 
         <EditText
             android:id="@+id/edt_register_activity_pw"
@@ -92,7 +91,7 @@
             android:textColor="#262626"
             android:textColorHint="#26000000"
 
-            tools:inputType="textWebEmailAddress" />
+            />
 
         <EditText
             android:id="@+id/edt_register_activity_checkpw"
@@ -105,7 +104,7 @@
             android:textColor="#262626"
             android:textColorHint="#26000000"
 
-            tools:inputType="textWebEmailAddress" />
+            />
 
         <EditText
             android:id="@+id/edt_register_activity_birth"
@@ -114,10 +113,9 @@
             android:backgroundTint="#26000000"
             android:ems="10"
             android:hint="생년월일"
-            android:inputType="textWebPassword"
+            android:inputType="number"
             android:textColor="#262626"
-            android:textColorHint="#26000000"
-            tools:inputType="textWebEmailAddress" />
+            android:textColorHint="#26000000" />
 
         <TextView
             android:id="@+id/tv_register_activity_message"
