--- a/app/src/main/res/layout/main_top_card_item.xml
+++ b/app/src/main/res/layout/main_top_card_item.xml
@@ -28,8 +28,8 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/tv_main_top_card_title"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_main_impo_card_title"
+                        android:layout_width="match_parent"
                         android:layout_height="25dp"
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
@@ -40,7 +40,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_main_top_card_date"
+                        android:id="@+id/tv_main_impo_card_date"
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -75,8 +75,8 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_main_top_card_content"
+            <jp.wasabeef.richeditor.RichEditor
+                android:id="@+id/tv_main_impo_card_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
@@ -86,7 +86,8 @@
                 android:text="1.bab\n2.gogi\n3.kimchi\n4.ddeok\n1.bab\n2.gogi\n3.kimchi\n4.ddeok\n"
                 android:textColor="#99000000"
                 android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                />
 
         </LinearLayout>
 
