1.CRUD 중 Read 완료 2.Delete 삭제 전 까지만 기능 구현 3.각종 자잘한 오류 수정 다음: delete 완벽 구현, update 구현, pinactivity에서 핀 받는 법 생각하기.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,6 +144,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/main___empty"
+            android:visibility="gone"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
             ></ImageView>
 
