--- a/app/src/main/res/layout/activity_pinactivity.xml
+++ b/app/src/main/res/layout/activity_pinactivity.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/lay_pin_activity_keyboard_use"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
     tools:context=".PINActivity">
 
     <androidx.constraintlayout.widget.Guideline
@@ -62,13 +64,34 @@
         app:layout_constraintTop_toTopOf="@+id/guideline16"
         app:layout_constraintVertical_bias="0.0">
 
+        <!--        <EditText-->
+        <!--            android:id="@+id/edt_pin_activity_keyboard"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:inputType="number"-->
+        <!--            android:visibility="visible" />-->
+
+        <requestFocus />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/tvimg_pin_activity_1_pin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:focusable="true"
+                android:text="●"
+                android:textAlignment="center"
+                android:textColor="#CDCDCD"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvimg_pin_activity_2_pin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -78,7 +101,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/textView16"
+                android:id="@+id/tvimg_pin_activity_3_pin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -88,17 +111,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/textView17"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="●"
-                android:textAlignment="center"
-                android:textColor="#CDCDCD"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/textView18"
+                android:id="@+id/tvimg_pin_activity_4_pin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -114,11 +127,13 @@
             android:layout_height="wrap_content"
             android:text="입력한 정보를 가지고 있지 않습니다"
             android:textAlignment="center"
-            android:textColor="#FF6868" />
+            android:textColor="#FF6868"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/laybtn_pin_activity_reset_user_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -129,7 +144,6 @@
         app:layout_constraintVertical_bias="0.22000003">
 
         <TextView
-            android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="PIN을 잊어버리셨나요?"
@@ -138,7 +152,6 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView45"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="PIN 재설정"
