--- a/app/src/main/res/layout/main_card_item.xml
+++ b/app/src/main/res/layout/main_card_item.xml
@@ -4,7 +4,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+
     <ImageView
+        android:id="@+id/iv_main_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/home_memo_ex"></ImageView>
@@ -51,4 +53,12 @@
                 android:layout_marginTop="10dp" />
         </LinearLayout>
     </LinearLayout>
+
+    <!-- delete icon -->
+    <ImageView
+        android:id="@+id/iv_main_card_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/delete"
+        android:visibility="gone"></ImageView>
 </FrameLayout>
