1.CRUD 중 Update,Read,Create 완료 2.PINActivity 완료 다음:btnSearch 하면 collasping Layout의 값을 감지 후 Height를 0dp로 맞추기.

--- a/app/src/main/res/layout/main_top_card_item.xml
+++ b/app/src/main/res/layout/main_top_card_item.xml
@@ -73,6 +73,21 @@
                         android:textColor="#FFCBCB"
                         android:textSize="14sp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_main_top_card_last_lock"
+                        android:layout_width="wrap_content"
+                        android:layout_height="25dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_weight="1"
+                        android:text="잠김"
+                        android:textAlignment="viewEnd"
+                        android:textColor="#FF6D6D"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:visibility="gone" />
+
                 </LinearLayout>
 
             </LinearLayout>
