--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,11 +39,13 @@
         <!--    </androidx.drawerlayout.widget.DrawerLayout>-->
 
         <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collaspig_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#F1F1F1"
