--- a/app/src/main/res/layout/activity_pinactivity.xml
+++ b/app/src/main/res/layout/activity_pinactivity.xml
@@ -71,8 +71,6 @@
         <!--            android:inputType="number"-->
         <!--            android:visibility="visible" />-->
 
-        <requestFocus />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -122,10 +120,10 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_reset_user_activity_message"
+            android:id="@+id/tv_pin_activity_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="입력한 정보를 가지고 있지 않습니다"
+            android:text="PIN이 일치하지 않습니다."
             android:textAlignment="center"
             android:textColor="#FF6868"
             android:visibility="invisible" />
@@ -157,6 +155,18 @@
             android:text="PIN 재설정"
             android:textAlignment="center"
             android:textColor="#FF6868" />
+
+        <EditText
+            android:id="@+id/edt_pin_activity_input_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:clickable="false"
+            android:ems="10"
+            android:inputType="number"
+            android:maxLength="4"
+            android:textColor="#FFFFFF"
+            android:textSize="1sp" />
     </LinearLayout>
 
 
