1.검색 디자인 완료 다음: 필터링을 통한 검색기능 추가

--- a/app/src/main/res/layout/activity_sample_acivity.xml
+++ b/app/src/main/res/layout/activity_sample_acivity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".sample.SampleAcivity">
 
     <EditText
@@ -14,4 +15,10 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="#FFFFFF" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnSample1"
+        android:text="눌러~"/>
 </LinearLayout>
