--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,7 +130,7 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <FrameLayout
                 android:id="@+id/lay_main_activity_searchbar"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -139,36 +139,51 @@
                 android:paddingRight="20dp"
                 android:visibility="gone">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_bars_solid"
-                    android:visibility="invisible" />
-
-                <EditText
+                <androidx.appcompat.widget.SearchView
                     android:id="@+id/edt_main_activity_search"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
                     android:layout_weight="10000"
-                    android:hint="터치 후 제목,날짜,내용을 검색하세요"
-                    android:textAlignment="center"
+                    android:background="@drawable/search_bar"
+                    android:focusable="true"
                     android:textColor="#262626"
                     android:textColorHint="#BCBCBC"
-                    android:layout_gravity="center"
-                    android:backgroundTint="#F1F1F1"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    app:searchHintIcon="@null"
+                    app:showAsAction="always"
+                    android:iconifiedByDefault="false"
+                    android:elevation="3dp"
+                    android:textAlignment="center"
+                    />
 
-                <ImageView
-                    android:id="@+id/btn_main_memo_search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_search_solid"
-                    android:visibility="invisible" />
+                <TextView
+                    android:id="@+id/tv_main_activity_search_hint_object"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="제목,내용,시간,날짜등을 검색하세요."
+                    android:textAlignment="center"
+                    android:textColor="#BCBCBC"
+                    android:elevation="4dp"
+                    />
 
-            </LinearLayout>
+                <!--                <EditText-->
+                <!--                    android:id="@+id/edt_main_activity_search"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_weight="10000"-->
+                <!--                    android:hint="터치 후 제목,날짜,내용을 검색하세요"-->
+                <!--                    android:textAlignment="center"-->
+                <!--                    android:textColor="#262626"-->
+                <!--                    android:textColorHint="#BCBCBC"-->
+                <!--                    android:layout_gravity="center"-->
+                <!--                    android:backgroundTint="#F1F1F1"-->
+                <!--                    android:textSize="20sp" />-->
+
+
+            </FrameLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
