--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,27 +147,24 @@
                     android:layout_margin="5dp"
                     android:layout_weight="10000"
                     android:background="@drawable/search_bar"
+                    android:elevation="3dp"
                     android:focusable="true"
+                    android:iconifiedByDefault="false"
                     android:textColor="#262626"
                     android:textColorHint="#BCBCBC"
                     android:textSize="20sp"
                     app:searchHintIcon="@null"
-                    app:showAsAction="always"
-                    android:iconifiedByDefault="false"
-                    android:elevation="3dp"
-                    android:textAlignment="center"
-                    />
+                    app:showAsAction="always" />
 
                 <TextView
                     android:id="@+id/tv_main_activity_search_hint_object"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:elevation="4dp"
                     android:gravity="center"
                     android:text="제목,내용,시간,날짜등을 검색하세요."
                     android:textAlignment="center"
-                    android:textColor="#BCBCBC"
-                    android:elevation="4dp"
-                    />
+                    android:textColor="#BCBCBC" />
 
                 <!--                <EditText-->
                 <!--                    android:id="@+id/edt_main_activity_search"-->
